# cntx_linuxServer

code/cmake/: FindFreeTDS.cmake
code/common/: Macro.h  Packet.h  _IndependentCommon.h  common.h  commonForAdmin.cpp  commonForAdmin.h  err.cpp  err.h  updateUIData.h
code/service/: CMakeLists.txt
code/service/Admin_Main_service/: Admin_Main_service.cfg  CMakeLists.txt  ManageAESConnection.cpp  ManageAESConnection.h  ManageAccount.cpp  ManageAccount.h  ManageComponent.cpp  ManageComponent.h  ManageMonitorSpec.cpp  ManageMonitorSpec.h  ManagePower.cpp  ManagePower.h  ManageRequest.cpp  ManageRequest.h  MonitorAccount.cpp  MonitorAccount.h  QuerySet.h  RCa12840  _commonForAdminSite.cfg  admin_main_service.cpp  admin_main_service.h  admin_main_service.rc  admin_main_service_vc150.vcxproj  admin_main_service_vc90.vcproj  resource.h
code/service/Common/: CHBase.h  Common.h  ConfigFile.cpp  ConfigFile.h  DBData.cpp  DBData.h  DBLog.h  DataBase_MySql.h  ExcelXML.cpp  ExcelXML.h  Lang.cpp  Lang.h  QuerySetForAccount.h  QuerySetForHunqing.h  QuerySetForMain.h  QuerySetForShard.h  TGException.cpp  TGException.h  netCommon.cpp  netCommon.h  sqlWrapper.cpp  sqlWrapper.h
code/service/HisManager_service/: CMakeLists.txt  HisManager.rc  HisManager_service.cfg  HisManager_vc150.vcxproj  HisManager_vc150.vcxproj.filters  HisManager_vc90.vcproj  RCa08868  main.cpp  resource.h
code/service/LogService/: CMakeLists.txt  Logservice.rc  Logservice_vc150.vcxproj  Logservice_vc150.vcxproj.filters  Logservice_vc90.vcproj  RCa08868  main.cpp
code/service/RelayService/: CMakeLists.txt  RTPParser.cpp  RTPParser.h  RelayService.cpp  RelayService.rc  RelayService_vc90.vcproj  RelayTask.cpp  RelayTask.h  _commonForShard.cfg  _securitysystem.cfg  relay_service.cfg  resource.h
code/service/admin_executor_service/: CMakeLists.txt  admin_executor_service.cfg  admin_executor_service.cpp  admin_executor_service.rc  admin_executor_service_vc150.vcxproj  admin_executor_service_vc150.vcxproj.filters  admin_executor_service_vc90.vcproj  log_report.cpp  log_report.h  resource.h
code/service/frontend/: CMakeLists.txt  Filter.cpp  GMClient.cpp  MultiService.h  WorldChatManaget.cpp  WorldChatManaget.h  _commonForShard.cfg  common.cfg  frontend.rc  frontend_vc150.vcxproj  frontend_vc90.vcproj  main.cpp  main.h  resource.h  shard_client.cpp  shard_client.h
code/service/login_service/: CMakeLists.txt  Mails.cpp  Mails.h  common.cfg  connection_ss.cpp  connection_ss.h  connection_web.h  connection_ws.cpp  connection_ws.h  login_service.cfg  login_service.cpp  login_service.h  login_service.rc  login_service_vc150.vcxproj  login_service_vc90.vcproj  players.cpp  players.h  resource.h
code/service/manager_service/: AutoPlayData.cpp  AutoPlayer.cpp  AutoPlayer.h  CMakeLists.txt  RCa08868  main.cpp  main.h  manager.rc  manager_service.cfg  manager_vc150.vcxproj  manager_vc90.vcproj  manageroom.cpp  manageroom.h  player.cpp  player.h  resource.h  silence.cpp  silence.h  toplist.cpp  toplist.h  zaixiankefu.cpp  zaixiankefu.h
code/service/naming_service/: CMakeLists.txt  RCa08868  naming_service.cfg  naming_service.cpp  naming_service.rc  naming_service_vc150.vcxproj  naming_service_vc90.vcproj  resource.h
code/service/openroom/: Animal.cpp  Animal.h  BrokerService.cpp  CMakeLists.txt  Cell.cpp  Cell.h  ChannelWorld.cpp  ChannelWorld.h  Character.cpp  Character.h  Chat.cpp  DBLog.cpp  Family.cpp  Family.h  HuangdiRoom.h  Inven.cpp  Inven.h  LoadOutData.cpp  LoadOutData.h  Lobby.cpp  Lobby.h  Mail.cpp  Mail.h  OutData.ini  ParseArgs.cpp  ParseArgs.h  PublicRoom.cpp  PublicRoom.h  RCa08868  ReligionRoom.cpp  ReligionRoom.h  SharedActWorld.cpp  SharedActWorld.h  World.cpp  World.h  _adminsystem.cfg  _commonForShard.cfg  contact.cpp  contact.h  main.cpp  (+17 more)
code/service/start_service/: CMakeLists.txt  IPData.h  RCa08868  UpdateServer.cpp  UpdateServer.h  masterService.cpp  masterService.h  resource.h  slaveService.cpp  slaveService.h  start_service.cfg  start_service.cpp  start_service.h  start_service.rc  start_service.sln  start_service_vc150.vcxproj  start_service_vc90.vcproj
code/service/welcome_service/: CMakeLists.txt  RCa08868  _common.cfg  resource.h  welcome_service.cfg  welcome_service.cpp  welcome_service.h  welcome_service.rc  welcome_service_.cfg  welcome_service_itf.h  welcome_service_vc150.vcxproj  welcome_service_vc90.vcproj
code/sip/net/src/misc/: CMakeLists.txt  CPU.cpp  CryptKey.cpp  CryptMethod.cpp  CryptSystemManager.cpp  DBCaller.cpp  HttpDown.cpp  SipErrMgmtFunc.cpp  SipException.cpp  SipHttpClient.cpp  SipStringFunc.cpp  algo.cpp  apex_memmove.cpp  app_context.cpp  async_file_manager.cpp  big_file.cpp  bit_mem_stream.cpp  bit_set.cpp  block_memory.cpp  buf_fifo.cpp  class_id.cpp  class_registry.cpp  co_task.cpp  command.cpp  common.cpp  connectionPool.cpp  contiguous_block_allocator.cpp  cpu_info.cpp  cpu_time_stat.cpp  dbProcTask.cpp  debug.cpp  device_manager.cpp  diff_tool.cpp  displayer.cpp  dynloadlib.cpp  eid_translator.cpp  entity_id.cpp  fast_mem.cpp  file.cpp  fixed_size_allocator.cpp  (+44 more)
code/sip/net/src/misc/config_file/: cf_flex.skl  cf_gramatical.cpp  cf_gramatical.h  cf_gramatical.yxx  cf_lexical.cpp  cf_lexical.lxx  config_file.cpp  do.bat
code/sip/net/src/net/: AuthAccountServer.cpp  CMakeLists.txt  CryptEngine.cpp  CryptTask.cpp  DelayServer.cpp  INetServer.cpp  IProtocolServer.cpp  Key.cpp  MulticastSock.cpp  NatTypeDetectionClient.cpp  NatTypeDetectionServer.cpp  P2P.cpp  PeerBase.cpp  SecurityClient.cpp  SecurityInfo.cpp  SecurityServer.cpp  TcpPeer.cpp  TimerRegistry.cpp  UDPPeerClient.cpp  UDPPeerServer.cpp  UdpHolePunchingClient.cpp  UdpHolePunchingServer.cpp  UdpPeer.cpp  UdpPeerBroker.cpp  admin.cpp  buf_client.cpp  buf_net_base.cpp  buf_server.cpp  buf_sock.cpp  buf_udpsock.cpp  callback_client.cpp  callback_net_base.cpp  callback_server.cpp  callback_udp.cpp  cookie.cpp  dummy_tcp_sock.cpp  email.cpp  inet_address.cpp  listen_sock.cpp  login_cookie.cpp  (+29 more)
doc/: database.md  hint.md
test/: CMakeLists.txt  main.cpp  test_mem.md  test_wchar_t.md
test/include/: type.h
(+238 files in other folders)
